--- a/fraud_detection_v1/.env
+++ b/fraud_detection_v1/.env
@@ -1,4 +1,7 @@
+# PostgreSQL credentials
 POSTGRES_USER=user
 POSTGRES_PASSWORD=password
-POSTGRES_DB=fraud_detection_db
-DATABASE_URL=postgresql://user:password@db:5432/fraud_detection_db
+POSTGRES_DB=fraud_db
+
+# Full database connection string for the backend application
+DATABASE_URL=postgresql://user:password@db:5432/fraud_db
