mounted tests in yml file

--- a/fraud_detection_v1/docker-compose.yml
+++ b/fraud_detection_v1/docker-compose.yml
@@ -23,6 +23,8 @@ services:
     volumes:
       # Mount the app code directory for live reloading during development
       - ./backend/app:/code/app
+      # Mount the test directory
+      - ./backend/tests:code/tests
     ports:
       - "8000:8000"
     env_file:
