--- a/fraud_detection_v1/docker-compose.yml
+++ b/fraud_detection_v1/docker-compose.yml
@@ -24,11 +24,14 @@ services:
       # Mount the app code directory for live reloading during development
       - ./backend/app:/code/app
       # Mount the test directory
-      - ./backend/tests:code/tests
+      - ./backend/tests:/code/tests
     ports:
       - "8000:8000"
     env_file:
       - ./.env
+    # The environment to import modules from
+    environment:
+      - PYTHONPATH=/code
     depends_on:
       db:
         condition: service_healthy
