Setting root access for copying frontend

--- a/fraud_detection_v2/transaction_api/Dockerfile
+++ b/fraud_detection_v2/transaction_api/Dockerfile
@@ -1,17 +1,23 @@
 # Use an official Python runtime as a parent image
 FROM python:3.9-slim
 
-# Set the working directory in the container
+# Set the working directory for the application code
 WORKDIR /code
 
-# Copy the requirements file into the container at /code
-COPY ./requirements.txt /code/requirements.txt
+# --- Paths are relative to the project root (the build context) ---
 
-# Install any needed packages specified in requirements.txt
+# Copy the requirements file from its specific subfolder
+COPY ./transaction_api/requirements.txt /code/requirements.txt
+
+# Install dependencies
 RUN pip install --no-cache-dir --upgrade -r /code/requirements.txt
 
-# Copy the rest of the application's code
-COPY ./app /code/app
+# Copy the application code into the working directory
+COPY ./transaction_api/app /code/app
+
+# Copy the frontend files to the absolute path the Python app expects
+COPY ./frontend /app/frontend
 
 # Command to run the application
 CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
+
