--- a/fraud_detection_v2/docker-compose.yml
+++ b/fraud_detection_v2/docker-compose.yml
@@ -2,49 +2,44 @@ version: '3.8'
 
 services:
   zookeeper:
-    image: bitnami/zookeeper:3.8
+    image: confluentinc/cp-zookeeper:7.3.0
+    environment:
+      ZOOKEEPER_CLIENT_PORT: 2181
+      ZOOKEEPER_TICK_TIME: 2000
     ports:
       - "2181:2181"
-    environment:
-      - ALLOW_ANONYMOUS_LOGIN=yes
-    volumes:
-      - "zookeeper_data:/bitnami/zookeeper"
 
   kafka:
-    image: bitnami/kafka:3.3
+    image: confluentinc/cp-kafka:7.3.0
+    depends_on:
+      - zookeeper
     ports:
       - "9092:9092"
     environment:
-      - KAFKA_CFG_ZOOKEEPER_CONNECT=zookeeper:2181
-      - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://kafka:9092
-      - ALLOW_PLAINTEXT_LISTENER=yes
-    volumes:
-      - "kafka_data:/bitnami/kafka"
-    depends_on:
-      - zookeeper
+      KAFKA_BROKER_ID: 1
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+      KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
+      KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
+      KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS: 0
+      KAFKA_AUTO_CREATE_TOPICS_ENABLE: 'true'
 
   transaction-api:
-    build: ./transaction-api
+    build:
+      context: .
+      dockerfile: ./transaction_api/Dockerfile
     ports:
       - "8000:8000"
-    environment:
-      - KAFKA_BOOTSTRAP_SERVERS=kafka:9092
-      - TRANSACTIONS_TOPIC=transactions
-      - RESULTS_TOPIC=transaction-results
     depends_on:
       - kafka
+    environment:
+      - KAFKA_BOOTSTRAP_SERVERS=kafka:9092
 
   fraud-detector:
-    build: ./fraud-detector
-    environment:
-      - KAFKA_BOOTSTRAP_SERVERS=kafka:9092
-      - TRANSACTIONS_TOPIC=transactions
-      - RESULTS_TOPIC=transaction-results
+    build: ./fraud_detector
     depends_on:
       - kafka
+    environment:
+      - KAFKA_BOOTSTRAP_SERVERS=kafka:9092
 
-volumes:
-  zookeeper_data:
-    driver: local
-  kafka_data:
-    driver: local
