--- a/fraud_detection_v2/docker-compose.yml
+++ b/fraud_detection_v2/docker-compose.yml
@@ -43,3 +43,8 @@ services:
     environment:
       - KAFKA_BOOTSTRAP_SERVERS=kafka:9092
 
+  tests:
+    build: ./tests
+    depends_on:
+      - transaction-api
+      - fraud-detector
